@@ -4,6 +4,7 @@ Upcoming version
 [BUGFIX]  Replace all occurences of additional word characters, not only the first one. Thanks to K. Quiatkowski. https://github.com/tpwd/ke_search/issues/19
 [TASK]    Show hidden content in backend module "Indexed content" function
 [DOCS]    Add hint about using the additional word characters feature for searching for @ when using InnoDB
+[BUGFIX]  Fix regression introduced in version 5.0.0 which made empty searches slow because tags were fetched too often, thanks to Stephan Bauer, https://github.com/tpwd/ke_search/issues/4
 
 Version 5.1.2, 27 October 2023
 [BUGFIX]  Keep the original value for "loadFlexformsFromOtherCE" even if the search box plugin has an empty value in the FlexForm which lead to empty search results, thanks to Uwe Hawkeye1909, https://github.com/tpwd/ke_search/issues/142
